Add missing `bottom' links

--- a/2021-july.md
+++ b/2021-july.md
@@ -139,6 +139,10 @@ Use `btm` command to run the program.
 [nyxt-history]: https://nyxt.atlas.engineer/#tree
 [nyxt-buffers]: https://nyxt.atlas.engineer/#fuzzy
 
+[bottom]: https://github.com/ClementTsang/bottom
+[bottom-copr]: https://copr.fedorainfracloud.org/coprs/opuk/bottom/
+[bottom-img]: img/bottom.png
+
 [glow]: https://github.com/charmbracelet/glow
 [glow-copr]: https://copr.fedorainfracloud.org/coprs/keefle/glow/
 [glow-img]: img/glow.png
