Finish the btm section

--- a/2021-july.md
+++ b/2021-july.md
@@ -99,7 +99,17 @@ sudo dnf install nyxt
 
 
 ## Bottom
-[Bottom][bottom] TODO
+[Bottom][bottom] is a system monitor with a customizable interface and
+a multitude of features, inspired by [gtop][gtop], [gotop][gotop],
+and [htop][htop]. As such, it supports processes monitoring and
+[CPU][bottom-cpu],
+[RAM][bottom-ram] , and [network][bottom-network] usage monitoring. Besides those, it provides also
+more exotic widgets such as [disk capacity][bottom-disk] usage, [temperature sensors][bottom-temp],
+and [batery][bottom-battery] usage.
+
+It utilizes the screen estate very efficiently thanks to the
+customizable layout of widgets as well as
+[possibility to focus on just one widget and maximizing it][expansion].
 
 ![Bottom][bottom-img]
 
@@ -142,6 +152,16 @@ Use `btm` command to run the program.
 [bottom]: https://github.com/ClementTsang/bottom
 [bottom-copr]: https://copr.fedorainfracloud.org/coprs/opuk/bottom/
 [bottom-img]: img/bottom.png
+[gtop]: https://github.com/aksakalli/gtop
+[gotop]: https://github.com/xxxserxxx/gotop
+[htop]: https://github.com/htop-dev/htop/
+[expansion]: https://clementtsang.github.io/bottom/nightly/usage/general-usage/#expansion
+[bottom-cpu]: https://clementtsang.github.io/bottom/nightly/usage/widgets/cpu/
+[bottom-ram]: https://clementtsang.github.io/bottom/nightly/usage/widgets/memory/
+[bottom-network]: https://clementtsang.github.io/bottom/nightly/usage/widgets/network/
+[bottom-disk]: https://clementtsang.github.io/bottom/nightly/usage/widgets/disk/
+[bottom-temp]: https://clementtsang.github.io/bottom/nightly/usage/widgets/temperature/
+[bottom-battery]: https://clementtsang.github.io/bottom/nightly/usage/widgets/battery/
 
 [glow]: https://github.com/charmbracelet/glow
 [glow-copr]: https://copr.fedorainfracloud.org/coprs/keefle/glow/
