Some grammar fixes

--- a/2021-july.md
+++ b/2021-july.md
@@ -14,17 +14,17 @@ for how to get started.
 
 
 ## Wike
-[Wike][wike] is a Wikipedia reader for the GNOME Desktop. It provides
-a distraction-free access to the online encyclopedia with a search
-integration to the GNOME Shell. While its interface is minimalistic,
-it supports switching an article between multiple languages,
-bookmarks, article table of contents, dark mode, and more.
+[Wike][wike] is a Wikipedia reader for the GNOME Desktop with search
+integration in the GNOME Shell. It provides distraction-free access to
+the [online encyclopedia][wikipedia]. While its interface is
+minimalistic, it supports switching an article between multiple
+languages, bookmarks, article table of contents, dark mode, and more.
 
 ![Wike][wike-img]
 
 ### Installation instructions
 
-The [repo][wike-copr] currently provides Ytfzf for Fedora
+The [repo][wike-copr] currently provides Wike for Fedora
 33, 34, and Fedora Rawhide. To install it, use these commands:
 
 ```
@@ -77,19 +77,22 @@ sudo dnf install droidcam
 
 ## Nyxt
 [Nyxt][nyxt] is a keyboard-oriented, infinitely extensible web browser
-designed for power users and  heavily inspired by Emacs. As such it is
-implemented and configured in Common Lisp, and provides familiar
-key-bindings ([Emacs][emacs], [vi][vi], [CUA][cua]).
+designed for power users. It was heavily inspired by Emacs and as as
+such it is implemented and configured in Common Lisp, and provides
+familiar key-bindings ([Emacs][emacs], [vi][vi], [CUA][cua]).
 
-Among killer-features belongs built-in REPL,
+Killer-features that cannot be missed are a built-in REPL,
 [tree history][nyxt-history], [buffers instead of tabs][nyxt-buffers],
 and [so much more][nyxt].
+
+Nyxt is web engine agnostic so don't worry about pages rendering
+unexpectedly.
 
 ![Nyxt][nyxt-img]
 
 ### Installation instructions
 
-The [repo][nyxt-copr] currently provides Ytfzf for Fedora
+The [repo][nyxt-copr] currently provides Nyxt for Fedora
 33, 34, and Fedora Rawhide. To install it, use these commands:
 
 ```
@@ -100,22 +103,23 @@ sudo dnf install nyxt
 
 ## Bottom
 [Bottom][bottom] is a system monitor with a customizable interface and
-a multitude of features, inspired by [gtop][gtop], [gotop][gotop],
-and [htop][htop]. As such, it supports processes monitoring and
-[CPU][bottom-cpu],
-[RAM][bottom-ram] , and [network][bottom-network] usage monitoring. Besides those, it provides also
-more exotic widgets such as [disk capacity][bottom-disk] usage, [temperature sensors][bottom-temp],
-and [batery][bottom-battery] usage.
+multitude of features, It took inspiration in [gtop][gtop], [gotop][gotop],
+and [htop][htop]. As such, it supports [processes][bottom-processes]
+monitoring, [CPU][bottom-cpu], [RAM][bottom-ram],
+and [network][bottom-network] usage monitoring. Besides those, it
+provides also more exotic widgets such as [disk capacity][bottom-disk]
+usage, [temperature sensors][bottom-temp], and
+[battery][bottom-battery] usage.
 
 It utilizes the screen estate very efficiently thanks to the
-customizable layout of widgets as well as
+customizable layout of widgets as well as the
 [possibility to focus on just one widget and maximizing it][expansion].
 
 ![Bottom][bottom-img]
 
 ### Installation instructions
 
-The [repo][glow-copr] currently provides Ytfzf for Fedora
+The [repo][glow-copr] currently provides Bottom for Fedora
 33, 34, and Fedora Rawhide. Also available for EPEL 7 and 8.
 To install it, use these commands:
 
@@ -134,6 +138,7 @@ Use `btm` command to run the program.
 [wike]: https://github.com/hugolabe/Wike
 [wike-copr]: https://copr.fedorainfracloud.org/coprs/xfgusta/wike/
 [wike-img]: img/wike.png
+[wikipedia]: https://en.wikipedia.org/wiki/Main_Page
 
 [droidcam]: https://www.dev47apps.com/
 [droidcam-copr]: https://copr.fedorainfracloud.org/coprs/meeuw/droidcam/builds/
@@ -156,6 +161,7 @@ Use `btm` command to run the program.
 [gotop]: https://github.com/xxxserxxx/gotop
 [htop]: https://github.com/htop-dev/htop/
 [expansion]: https://clementtsang.github.io/bottom/nightly/usage/general-usage/#expansion
+[botom-processes]: https://clementtsang.github.io/bottom/nightly/usage/widgets/process/
 [bottom-cpu]: https://clementtsang.github.io/bottom/nightly/usage/widgets/cpu/
 [bottom-ram]: https://clementtsang.github.io/bottom/nightly/usage/widgets/memory/
 [bottom-network]: https://clementtsang.github.io/bottom/nightly/usage/widgets/network/
