Oops, fix inspiration s/in/from/

--- a/2021-july.md
+++ b/2021-july.md
@@ -103,7 +103,7 @@ sudo dnf install nyxt
 
 ## Bottom
 [Bottom][bottom] is a system monitor with a customizable interface and
-multitude of features, It took inspiration in [gtop][gtop], [gotop][gotop],
+multitude of features, It took inspiration from [gtop][gtop], [gotop][gotop],
 and [htop][htop]. As such, it supports [processes][bottom-processes]
 monitoring, [CPU][bottom-cpu], [RAM][bottom-ram],
 and [network][bottom-network] usage monitoring. Besides those, it
