--- a/2021-july.md
+++ b/2021-july.md
@@ -119,7 +119,7 @@ customizable layout of widgets as well as the
 
 ### Installation instructions
 
-The [repo][glow-copr] currently provides Bottom for Fedora
+The [repo][bottom-copr] currently provides Bottom for Fedora
 33, 34, and Fedora Rawhide. Also available for EPEL 7 and 8.
 To install it, use these commands:
 
@@ -141,7 +141,7 @@ Use `btm` command to run the program.
 [wikipedia]: https://en.wikipedia.org/wiki/Main_Page
 
 [droidcam]: https://www.dev47apps.com/
-[droidcam-copr]: https://copr.fedorainfracloud.org/coprs/meeuw/droidcam/builds/
+[droidcam-copr]: https://copr.fedorainfracloud.org/coprs/meeuw/droidcam
 [droidcam-img]: img/droidcam.png
 [rpm-fusion-free-repository]: https://docs.fedoraproject.org/en-US/quick-docs/setup_rpmfusion/#proc_enabling-the-rpmfusion-repositories-using-command-line-utilities_enabling-the-rpmfusion-repositories
 
@@ -161,7 +161,7 @@ Use `btm` command to run the program.
 [gotop]: https://github.com/xxxserxxx/gotop
 [htop]: https://github.com/htop-dev/htop/
 [expansion]: https://clementtsang.github.io/bottom/nightly/usage/general-usage/#expansion
-[botom-processes]: https://clementtsang.github.io/bottom/nightly/usage/widgets/process/
+[bottom-processes]: https://clementtsang.github.io/bottom/nightly/usage/widgets/process/
 [bottom-cpu]: https://clementtsang.github.io/bottom/nightly/usage/widgets/cpu/
 [bottom-ram]: https://clementtsang.github.io/bottom/nightly/usage/widgets/memory/
 [bottom-network]: https://clementtsang.github.io/bottom/nightly/usage/widgets/network/
