Update 2023 June draft

--- a/2023-june.md
+++ b/2023-june.md
@@ -22,10 +22,10 @@ landed in Copr.
 ## chatGPT-shell-cli
 
 This year it seems that anywhere you look, [ChatGPT][chatgpt] is
-there. In Copr, we have [chatGPT-shell-cli][chatgpt-github] - a
-lightweight ChatGPT and [DALL-E][dall-e] client written in Bash. It
-can be especially useful for systems without the standard dependencies
-such as Python.
+there. This time we have a lightweight ChatGPT and [DALL-E][dall-e]
+client written in Bash called [chatGPT-shell-cli][chatgpt-github].
+It can be especially useful for systems without standard
+dependencies such as Python or Node.js.
 
 ![chatGPT-shell-cli][chatgpt-img]
 
@@ -43,11 +43,11 @@ sudo dnf install chatgpt-shell-cli
 
 ## Hyprland
 
-Hyprland is a beautifuly looking compositor for Wayland. It provides
+Hyprland is a beautifully looking compositor for Wayland. It provides
 dynamic tiling with multiple layouts, smooth animations, and endless
 customization options. Similarly to [Sway][sway] or [i3][i3], it
 has a simple configuration file that doesn't require you to know the
-programming language the software was written in.
+programming language it was written in.
 
 ![Hyprland][hyprland-img]
 
@@ -67,8 +67,8 @@ sudo dnf install hyprland
 ## Wezterm
 
 [Wezterm][wezterm] is a modern terminal emulator that runs on all the
-major operating systems. It has a built-in support for terminal
-mlutiplexing, rendering images, emojis, GPU acceleration, and many
+major operating systems. It has built-in support for terminal
+multiplexing, rendering images, emojis, GPU acceleration, and many
 more features.
 
 ![Wezterm][wezterm-img]
@@ -84,13 +84,14 @@ sudo dnf install wezterm
 ```
 
 
-## Htpdate
+## htpdate
 
 [htpdate][htpdate] is a time synchronization client for the HTTP Time
-Protocol (HTP). It is not better than Network Time Protocol (NTP)
-which is used in Fedora by default but sometimes NTP doesn't work
-because of proxy or firewall restrictions. That's when HTP and
-`htpdate` become useful.
+Protocol (HTP). Is it better than Network Time Protocol (NTP) which is
+used in Fedora by default? It's not,
+[you should use NTP if you can][htpdate-faq].
+However, NTP sometimes doesn't work because of proxy or firewall
+restrictions. That's when HTP and `htpdate` become very useful.
 
 ![htpdate][htpdate-img]
 
@@ -132,3 +133,4 @@ sudo dnf install htpdate
 [htpdate]: http://www.vervest.org/htp/
 [htpdate-copr]: https://copr.fedorainfracloud.org/coprs/whitehara/htpdate/
 [htpdate-img]: img/htpdate.png
+[htpdate-faq]: https://www.vervest.org/htp/?FAQ
